--- a/noc/Ecertificate/index.html
+++ b/noc/Ecertificate/index.html
@@ -65,7 +65,7 @@
         if (certificateId) {
             // You can customize this path based on where you store your PDFs
             // Option 1: If PDFs are in a 'certificates' folder
-            certificateBtn.href = `/certificates/${certificateId}.pdf`;
+            certificateBtn.href = `NPTEL24MG102S852805904,pdf`;
             
             // Option 2: If you want to use the original NPTEL-style path
             // certificateBtn.href = `/NOC/NOC25/SEM1/Ecertificates/110/noc25-mg08/Course/${certificateId}.pdf`;
