--- a/noc/Ecertificate/index.html
+++ b/noc/Ecertificate/index.html
@@ -65,13 +65,13 @@
         if (certificateId) {
             // You can customize this path based on where you store your PDFs
             // Option 1: If PDFs are in a 'certificates' folder
-            certificateBtn.href = `NPTEL24MG102S852805904,pdf`;
+            //certificateBtn.href = `NPTEL24MG102S852805904,pdf`;
             
             // Option 2: If you want to use the original NPTEL-style path
             // certificateBtn.href = `/NOC/NOC25/SEM1/Ecertificates/110/noc25-mg08/Course/${certificateId}.pdf`;
             
             // Option 3: If you have a specific PDF file, replace with your actual PDF URL
-            // certificateBtn.href = '/path/to/your/specific/certificate.pdf';
+            certificateBtn.href = 'NPTEL24MG102S852805904.pdf';
         } else {
             // If no certificate ID, you can set a default behavior
             certificateBtn.href = '#';
